# tracking

./: CMakeLists.txt  GNUmakefile  README.md  muongm2edmsim.cc
FLDATA/: 20160422_Abe2017May-5.txt  20160422_Abe2017May-77.txt  20160422_Abe2017May-77_n15.txt  20160422_coil1_weak.txt  3CBs-Narrow-region-n3E-4-Abe20171120.txt  3CBs-Narrow-region-n3E-4-Abe20171120_n15.txt
beamSample/: sample4_5420.txt  sample_1200_good.txt  t_test0_x5_y148_785_typcirmod_tCut14882.txt  t_test_2018Feb8.txt
include/: ApplicationManager.hh  BodySD.hh  DetectorConstruction.hh  DetectorMessenger.hh  EventAction.hh  EventActionMessenger.hh  F04PhysicsList.hh  F04PhysicsListMessenger.hh  G4HadronProcessStore.hh  MagneticField.hh  MagneticFieldMessenger.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorMessenger.hh  RunAction.hh  RunActionMessenger.hh  SteppingAction.hh  SteppingActionMessenger.hh  SteppingVerbose.hh
macro/: README.md  README.md~  originvis.mac  tmp_track_0.mac
src/: ApplicationManager.cc  BodySD.cc  CalHit.cc  DetectorConstruction.cc  DetectorConstructoin.cc  DetectorConstructoin.cc.170209  DetectorConstructoin.cc.cleanuped  DetectorConstructoin.cc.deadspace  DetectorConstructoin.cc.distributed  DetectorConstructoin.cc.org  DetectorMessenger.cc  EventAction.cc  EventActionMessenger.cc  F04PhysicsList.cc  F04PhysicsListMessenger.cc  MagneticField.cc  MagneticFieldMessenger.cc  MyG4EmStandardPhysics_option4.cc  PhysListEmStandard.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorMessenger.cc  RunAction.cc  RunActionMessenger.cc  SteppingAction.cc  SteppingActionMessenger.cc  SteppingVerbose.cc
